Add DropBox API

--- a/CarCatalogue/appsettings.json
+++ b/CarCatalogue/appsettings.json
@@ -8,5 +8,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "DropBox": {
+    "AccessToken": "ACCESS_TOKEN"
+  },
   "AllowedHosts": "*"
 }
