Use simple caching

--- a/CarCatalogue/appsettings.json
+++ b/CarCatalogue/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=CarCatalogue;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=CarCatalogue;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true",
+    "Redis": "CONNECTION_STRING_REDIS"
   },
   "Logging": {
     "LogLevel": {
